<resources>
    <string name="app_name">ORC Scanner</string>
    <string name="credit_card_information">Card\nInformation</string>
    <string name="credit_card_number">Card Number</string>
    <string name="get_information">Get Information</string>
    <string name="about_card">About Card</string>
    <string name="card_scheme">Card Scheme</string>
    <string name="card_type">Card Type</string>
    <string name="card_level">Card Level</string>
    <string name="country">Country</string>
    <string name="card_bank">Bank</string>
    <string name="processing">Processing…</string>
    <string name="no_bin_number_was_found">No BIN number was found.</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="currency">Currency</string>
    <string name="phone">Phone</string>
    <string name="no_cards_added_yet">No Cards saved yet</string>
    <string name="recently_viewed_cards">Recently\nViewed Cards</string>
    <string name="no_internet_card_saved_for_future">There\'s currently no internet connection, we\'ll save this BIN (%s) and try it later for you.</string>
    <string name="offline_card_result_notification_text">We\'ve found a result for your offline capture. BIN(%s).</string>
    <string name="view_detail">View Detail</string>
    <string name="offline_scan_result">Offline Scan Result</string>
</resources>