<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="bankData"
            type="ng.mint.ocrscanner.model.CardResponse" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorActivityWhiteBackground"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="21dp"
            android:orientation="vertical">

            <include
                android:id="@+id/navigationView"
                layout="@layout/top_navigation_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/credit_card_number"
                android:textColor="@color/matt_black"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/panInputField"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@id/scan_button"
                    android:background="@drawable/edit_text_bg"
                    android:drawableStart="@drawable/ic_round_credit_card"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/credit_card_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="8"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:singleLine="true"
                    android:textColor="@color/matt_black"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/scan_button"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignTop="@id/panInputField"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/edit_text_bg"
                    android:onClick="onScanClicked"
                    android:src="@drawable/ic_round_center_focus_weak" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nextButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/black_solid_cornered_button_bg"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/get_information"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="13sp" />


            <RelativeLayout
                android:id="@+id/card_information_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:visibility='@{bankData == null ? View.GONE:View.VISIBLE}'
                tools:visibility="visible">


                <View
                    android:id="@+id/linear_dash"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/black_dashed_lines"
                    android:layerType="software" />

                <TextView
                    android:id="@+id/card_scheme_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linear_dash"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:padding="5dp"
                    android:text="@string/card_scheme"
                    android:textColor="@color/matt_black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/card_scheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_scheme_text"
                    android:padding="5dp"
                    android:text='@{bankData.scheme ?? ""}'
                    android:textColor="@color/matt_black"
                    android:textSize="17sp"
                    tools:text="Master Card" />

                <TextView
                    android:id="@+id/card_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linear_dash"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:padding="5dp"
                    android:text="@string/card_type"
                    android:textColor="@color/matt_black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/card_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_scheme_text"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:text='@{bankData.type ?? ""}'
                    android:textColor="@color/matt_black"
                    android:textSize="17sp"
                    tools:text="Debit" />

                <TextView
                    android:id="@+id/card_level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_scheme"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:padding="5dp"
                    android:text="@string/card_level"
                    android:textColor="@color/matt_black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/card_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_level_text"
                    android:padding="5dp"
                    android:text='@{bankData.category ?? ""}'
                    android:textColor="@color/matt_black"
                    android:textSize="17sp"
                    tools:text="Classic" />

                <TextView
                    android:id="@+id/card_country_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_type"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:padding="5dp"
                    android:text="@string/country"
                    android:textColor="@color/matt_black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/card_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_country_text"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:text='@{(bankData.country.emoji ?? "") +" "+ (bankData.country.name ?? "")}'
                    android:textColor="@color/matt_black"
                    android:textSize="17sp"
                    tools:text="🇳🇬 Nigeria" />

                <TextView
                    android:id="@+id/card_bank_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_level"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:padding="5dp"
                    android:text="@string/card_bank"
                    android:textColor="@color/matt_black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/card_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_bank_text"
                    android:padding="5dp"
                    android:text='@{bankData.bank.name ?? ""}'
                    android:textColor="@color/matt_black"
                    android:textSize="17sp"
                    tools:text="Guarantee Trust Bank" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</layout>